feat: implement language-independent CSV backup system (v0.8.0)
- Replace Excel-based export/import with CSV backup format

- Backup now includes all settings and custom currencies

- Language-independent format using section-based CSV structure

- Support for both replace and merge restore modes

- Added comprehensive validation and error handling

- Updated all 13 language translations for backup features

- CSV format is more universal and easier to inspect/edit than Excel

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -123,7 +123,6 @@
   "reset": "إعادة تعيين",
   "settingsSaveFailed": "فشل في حفظ الإعدادات",
   "totalBalance": "إجمالي الرصيد",
-  "exportToExcel": "تصدير إلى Excel",
   "exportData": "تصدير البيانات",
   "preparingExport": "جاري تحضير التصدير...",
   "noData": "لا توجد بيانات",
@@ -155,9 +154,7 @@
   "totalAmount": "إجمالي المبلغ",
   "lastTransaction": "آخر معاملة",
   "createdDate": "تاريخ الإنشاء",
-  "importFromExcel": "استيراد من Excel",
   "importData": "استيراد البيانات",
-  "selectExcelFile": "يرجى اختيار ملف Excel لاستيراد البيانات منه",
   "importValidationFailed": "فشل في التحقق من صحة الاستيراد",
   "importPreviewSummary": "سيضيف الاستيراد {{accounts}} حسابات مع {{transactions}} معاملات باستخدام {{currencies}} عملات",
   "importPreviewAccounts": "الحسابات المراد استيرادها",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "تم العثور على {{count}} حسابات مكررة",
   "duplicateTransactionsFound": "تم العثور على {{count}} معاملات مكررة",
   "importFailed": "فشل الاستيراد: {{error}}",
-  "importExecutionFailed": "فشل في معالجة بيانات الاستيراد",
   "noAccountsToImport": "لم يتم العثور على حسابات صحيحة في ملف Excel",
   "invalidAccountName": "حساب {{index}} له اسم غير صحيح",
   "invalidAccountCurrency": "حساب {{index}} له عملة غير صحيحة",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "تمت إزالة كلمة المرور بنجاح",
   "failedToRemovePassword": "فشل إزالة كلمة المرور",
   "noPasswordSet": "لم يتم تعيين كلمة مرور",
-  "noPasswordSetDescription": "قم بإعداد كلمة مرور في إعدادات التطبيق"
+  "noPasswordSetDescription": "قم بإعداد كلمة مرور في إعدادات التطبيق",
+  "exportBackup": "تصدير النسخة الاحتياطية (CSV)",
+  "importBackup": "استيراد النسخة الاحتياطية (CSV)",
+  "selectBackupFile": "الرجاء تحديد ملف CSV لاستعادة البيانات منه",
+  "customCurrencies": "العملات المخصصة",
+  "dateRange": "نطاق التاريخ",
+  "backupVersion": "إصدار النسخة الاحتياطية",
+  "restored": "تم الاستعادة",
+  "added": "تم الإضافة",
+  "restoreFailed": "فشل استعادة بيانات النسخة الاحتياطية"
 }
