--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -123,7 +123,6 @@
   "reset": "Zurücksetzen",
   "settingsSaveFailed": "Fehler beim Speichern der Einstellungen",
   "totalBalance": "Gesamtsaldo",
-  "exportToExcel": "Nach Excel exportieren",
   "exportData": "Daten exportieren",
   "preparingExport": "Export wird vorbereitet...",
   "noData": "Keine Daten",
@@ -155,9 +154,7 @@
   "totalAmount": "Gesamtbetrag",
   "lastTransaction": "Letzte Transaktion",
   "createdDate": "Erstellungsdatum",
-  "importFromExcel": "Aus Excel importieren",
   "importData": "Daten importieren",
-  "selectExcelFile": "Bitte wählen Sie eine Excel-Datei zum Importieren von Daten aus",
   "importValidationFailed": "Import-Validierung fehlgeschlagen",
   "importPreviewSummary": "Der Import wird {{accounts}} Konten mit {{transactions}} Transaktionen unter Verwendung von {{currencies}} Währungen hinzufügen",
   "importPreviewAccounts": "Zu importierende Konten",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}} doppelte Konten gefunden",
   "duplicateTransactionsFound": "{{count}} doppelte Transaktionen gefunden",
   "importFailed": "Import fehlgeschlagen: {{error}}",
-  "importExecutionFailed": "Fehler bei der Verarbeitung der Importdaten",
   "noAccountsToImport": "Keine gültigen Konten in der Excel-Datei gefunden",
   "invalidAccountName": "Konto {{index}} hat einen ungültigen Namen",
   "invalidAccountCurrency": "Konto {{index}} hat eine ungültige Währung",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Passwort erfolgreich entfernt",
   "failedToRemovePassword": "Fehler beim Entfernen des Passworts",
   "noPasswordSet": "Kein Passwort festgelegt",
-  "noPasswordSetDescription": "Richten Sie ein Passwort in den App-Einstellungen ein"
+  "noPasswordSetDescription": "Richten Sie ein Passwort in den App-Einstellungen ein",
+  "exportBackup": "Backup exportieren (CSV)",
+  "importBackup": "Backup importieren (CSV)",
+  "selectBackupFile": "Bitte wählen Sie eine CSV-Backup-Datei zum Wiederherstellen der Daten aus",
+  "customCurrencies": "Benutzerdefinierte Währungen",
+  "dateRange": "Datumsbereich",
+  "backupVersion": "Backup-Version",
+  "restored": "Wiederhergestellt",
+  "added": "Hinzugefügt",
+  "restoreFailed": "Fehler beim Wiederherstellen der Backup-Daten"
 }
