--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,16 +123,21 @@
   "reset": "Reset",
   "settingsSaveFailed": "Failed to save settings",
   "totalBalance": "Total Balance",
-  "exportToExcel": "Export to Excel",
+  "exportBackup": "Export Backup (CSV)",
   "exportData": "Export Data",
   "preparingExport": "Preparing export...",
   "noData": "No Data",
   "noDataToExport": "No data available to export. Please add some accounts and transactions first.",
   "exportConfirmation": "Export {{accounts}} accounts with {{transactions}} transactions using currencies: {{currencies}}?",
   "export": "Export",
-  "exportSuccess": "Data exported successfully!",
+  "exportSuccess": "Backup exported successfully!",
   "exportFailed": "Export failed. Please try again.",
   "exportPreparationFailed": "Failed to prepare export data.",
+  "customCurrencies": "Custom Currencies",
+  "dateRange": "Date Range",
+  "backupVersion": "Backup Version",
+  "restored": "Restored",
+  "added": "Added",
   "exportMetadata": "Export Information",
   "appName": "App Name",
   "exportDate": "Export Date",
@@ -155,27 +160,17 @@
   "totalAmount": "Total Amount",
   "lastTransaction": "Last Transaction",
   "createdDate": "Created Date",
-  "importFromExcel": "Import from Excel",
+  "importBackup": "Import Backup (CSV)",
   "importData": "Import Data",
-  "selectExcelFile": "Please select an Excel file to import data from",
-  "importValidationFailed": "Import Validation Failed",
-  "importPreviewSummary": "Import will add {{accounts}} accounts with {{transactions}} transactions using {{currencies}} currencies",
-  "importPreviewAccounts": "Accounts to import",
-  "andMoreAccounts": "and {{count}} more accounts",
-  "importPreviewDateRange": "Transaction date range",
-  "noTransactionsInRange": "No transactions",
-  "importWarning": "⚠️ This will modify your existing data",
+  "selectBackupFile": "Please select a CSV backup file to restore data from",
+  "importValidationFailed": "Backup Validation Failed",
+  "importWarning": "⚠️ This will modify your existing data. Settings and custom currencies will also be restored.",
   "replaceData": "Replace All Data",
   "mergeData": "Merge with Existing",
-  "processingImport": "Processing import...",
-  "importSuccess": "Import Successful",
-  "importSuccessMessage": "Successfully imported {{accounts}} accounts and {{transactions}} transactions",
-  "importMergeSuccess": "Import completed: Added {{accounts}} accounts and {{transactions}} transactions. Skipped {{skippedAccounts}} duplicate accounts and {{skippedTransactions}} duplicate transactions.",
-  "duplicatesDetected": "Duplicates Detected",
-  "duplicateAccountsFound": "{{count}} duplicate accounts found",
-  "duplicateTransactionsFound": "{{count}} duplicate transactions found",
+  "processingImport": "Processing backup...",
+  "importSuccess": "Restore Successful",
   "importFailed": "Import failed: {{error}}",
-  "importExecutionFailed": "Failed to process import data",
+  "restoreFailed": "Failed to restore backup data",
   "noAccountsToImport": "No valid accounts found in the Excel file",
   "invalidAccountName": "Account {{index}} has invalid name",
   "invalidAccountCurrency": "Account {{index}} has invalid currency",
