--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -123,7 +123,6 @@
   "reset": "Restablecer",
   "settingsSaveFailed": "Error al guardar la configuración",
   "totalBalance": "Saldo total",
-  "exportToExcel": "Exportar a Excel",
   "exportData": "Exportar Datos",
   "preparingExport": "Preparando exportación...",
   "noData": "Sin Datos",
@@ -155,9 +154,7 @@
   "totalAmount": "Cantidad Total",
   "lastTransaction": "Última Transacción",
   "createdDate": "Fecha de Creación",
-  "importFromExcel": "Importar desde Excel",
   "importData": "Importar Datos",
-  "selectExcelFile": "Por favor selecciona un archivo de Excel para importar datos desde",
   "importValidationFailed": "Falló la Validación de Importación",
   "importPreviewSummary": "La importación añadirá {{accounts}} cuentas con {{transactions}} transacciones usando {{currencies}} monedas",
   "importPreviewAccounts": "Cuentas a importar",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "Se encontraron {{count}} cuentas duplicadas",
   "duplicateTransactionsFound": "Se encontraron {{count}} transacciones duplicadas",
   "importFailed": "Falló la importación: {{error}}",
-  "importExecutionFailed": "Falló el procesamiento de datos de importación",
   "noAccountsToImport": "No se encontraron cuentas válidas en el archivo de Excel",
   "invalidAccountName": "La cuenta {{index}} tiene un nombre inválido",
   "invalidAccountCurrency": "La cuenta {{index}} tiene una moneda inválida",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Contraseña eliminada correctamente",
   "failedToRemovePassword": "Error al eliminar la contraseña",
   "noPasswordSet": "No hay contraseña configurada",
-  "noPasswordSetDescription": "Configura una contraseña en la configuración de la aplicación"
+  "noPasswordSetDescription": "Configura una contraseña en la configuración de la aplicación",
+  "exportBackup": "Exportar copia de seguridad (CSV)",
+  "importBackup": "Importar copia de seguridad (CSV)",
+  "selectBackupFile": "Seleccione un archivo CSV de copia de seguridad para restaurar los datos",
+  "customCurrencies": "Monedas personalizadas",
+  "dateRange": "Rango de fechas",
+  "backupVersion": "Versión de copia de seguridad",
+  "restored": "Restaurado",
+  "added": "Agregado",
+  "restoreFailed": "Error al restaurar los datos de copia de seguridad"
 }
