--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -123,7 +123,6 @@
   "privacyDescription": "داده‌های شما روی دستگاه شما باقی می‌ماند",
   "footerDescription": "LedgerWell به شما کمک می‌کند تا بدهی‌ها و اعتبارات را با پشتیبانی چند ارزی و حریم خصوصی کامل پیگیری کنید.",
   "copyrightText": "© ۲۰۲۵ سپهر محمدی. متن‌باز تحت مجوز MIT.",
-  "exportToExcel": "صدور به اکسل",
   "exportData": "صدور داده‌ها",
   "preparingExport": "در حال آماده‌سازی صدور...",
   "noData": "داده‌ای وجود ندارد",
@@ -155,9 +154,7 @@
   "totalAmount": "مقدار کل",
   "lastTransaction": "آخرین تراکنش",
   "createdDate": "تاریخ ایجاد",
-  "importFromExcel": "وارد کردن از اکسل",
   "importData": "وارد کردن داده‌ها",
-  "selectExcelFile": "لطفاً فایل اکسل را برای وارد کردن داده‌ها انتخاب کنید",
   "importValidationFailed": "اعتبارسنجی واردات ناموفق بود",
   "importPreviewSummary": "واردات {{accounts}} حساب با {{transactions}} تراکنش با استفاده از {{currencies}} ارز اضافه خواهد کرد",
   "importPreviewAccounts": "حساب‌های مورد واردات",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}} حساب تکراری یافت شد",
   "duplicateTransactionsFound": "{{count}} تراکنش تکراری یافت شد",
   "importFailed": "واردات ناموفق: {{error}}",
-  "importExecutionFailed": "پردازش داده‌های واردات ناموفق بود",
   "noAccountsToImport": "هیچ حساب معتبری در فایل اکسل یافت نشد",
   "invalidAccountName": "حساب {{index}} نام نامعتبری دارد",
   "invalidAccountCurrency": "حساب {{index}} ارز نامعتبری دارد",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "رمز عبور با موفقیت حذف شد",
   "failedToRemovePassword": "حذف رمز عبور ناموفق بود",
   "noPasswordSet": "رمز عبوری تنظیم نشده است",
-  "noPasswordSetDescription": "در تنظیمات برنامه رمز عبور تنظیم کنید"
+  "noPasswordSetDescription": "در تنظیمات برنامه رمز عبور تنظیم کنید",
+  "exportBackup": "صادرات پشتیبان (CSV)",
+  "importBackup": "وارد کردن پشتیبان (CSV)",
+  "selectBackupFile": "لطفاً یک فایل CSV برای بازیابی داده‌ها انتخاب کنید",
+  "customCurrencies": "ارزهای سفارشی",
+  "dateRange": "بازه زمانی",
+  "backupVersion": "نسخه پشتیبان",
+  "restored": "بازیابی شد",
+  "added": "اضافه شد",
+  "restoreFailed": "خطا در بازیابی داده‌های پشتیبان"
 }
