--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -123,7 +123,6 @@
   "noAccountsFound": "Aucun compte trouvé",
   "noTransactionsFound": "Aucune transaction trouvée",
   "totalBalance": "Solde Total",
-  "exportToExcel": "Exporter vers Excel",
   "exportData": "Exporter les Données",
   "preparingExport": "Préparation de l'exportation...",
   "noData": "Aucune Donnée",
@@ -155,9 +154,7 @@
   "totalAmount": "Montant Total",
   "lastTransaction": "Dernière Transaction",
   "createdDate": "Date de Création",
-  "importFromExcel": "Importer depuis Excel",
   "importData": "Importer les Données",
-  "selectExcelFile": "Veuillez sélectionner un fichier Excel pour importer les données",
   "importValidationFailed": "Échec de la Validation de l'Importation",
   "importPreviewSummary": "L'importation ajoutera {{accounts}} comptes avec {{transactions}} transactions utilisant {{currencies}} devises",
   "importPreviewAccounts": "Comptes à importer",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}} comptes en double trouvés",
   "duplicateTransactionsFound": "{{count}} transactions en double trouvées",
   "importFailed": "Échec de l'importation : {{error}}",
-  "importExecutionFailed": "Échec du traitement des données d'importation",
   "noAccountsToImport": "Aucun compte valide trouvé dans le fichier Excel",
   "invalidAccountName": "Le compte {{index}} a un nom invalide",
   "invalidAccountCurrency": "Le compte {{index}} a une devise invalide",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Mot de passe supprimé avec succès",
   "failedToRemovePassword": "Échec de la suppression du mot de passe",
   "noPasswordSet": "Aucun mot de passe défini",
-  "noPasswordSetDescription": "Configurez un mot de passe dans les paramètres de l'application"
+  "noPasswordSetDescription": "Configurez un mot de passe dans les paramètres de l'application",
+  "exportBackup": "Exporter la sauvegarde (CSV)",
+  "importBackup": "Importer la sauvegarde (CSV)",
+  "selectBackupFile": "Veuillez sélectionner un fichier CSV de sauvegarde pour restaurer les données",
+  "customCurrencies": "Devises personnalisées",
+  "dateRange": "Plage de dates",
+  "backupVersion": "Version de sauvegarde",
+  "restored": "Restauré",
+  "added": "Ajouté",
+  "restoreFailed": "Échec de la restauration des données de sauvegarde"
 }
