--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -123,7 +123,6 @@
   "reset": "Reset",
   "settingsSaveFailed": "Gagal menyimpan pengaturan",
   "totalBalance": "Saldo total",
-  "exportToExcel": "Ekspor ke Excel",
   "exportData": "Ekspor Data",
   "preparingExport": "Mempersiapkan ekspor...",
   "noData": "Tidak Ada Data",
@@ -155,9 +154,7 @@
   "totalAmount": "Total Jumlah",
   "lastTransaction": "Transaksi Terakhir",
   "createdDate": "Tanggal Dibuat",
-  "importFromExcel": "Impor dari Excel",
   "importData": "Impor Data",
-  "selectExcelFile": "Silakan pilih file Excel untuk mengimpor data",
   "importValidationFailed": "Validasi Impor Gagal",
   "importPreviewSummary": "Impor akan menambahkan {{accounts}} akun dengan {{transactions}} transaksi menggunakan {{currencies}} mata uang",
   "importPreviewAccounts": "Akun yang akan diimpor",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}} akun duplikat ditemukan",
   "duplicateTransactionsFound": "{{count}} transaksi duplikat ditemukan",
   "importFailed": "Impor gagal: {{error}}",
-  "importExecutionFailed": "Gagal memproses data impor",
   "noAccountsToImport": "Tidak ada akun valid yang ditemukan dalam file Excel",
   "invalidAccountName": "Akun {{index}} memiliki nama yang tidak valid",
   "invalidAccountCurrency": "Akun {{index}} memiliki mata uang yang tidak valid",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Kata sandi berhasil dihapus",
   "failedToRemovePassword": "Gagal menghapus kata sandi",
   "noPasswordSet": "Tidak Ada Kata Sandi",
-  "noPasswordSetDescription": "Atur kata sandi di pengaturan aplikasi"
+  "noPasswordSetDescription": "Atur kata sandi di pengaturan aplikasi",
+  "exportBackup": "Ekspor Cadangan (CSV)",
+  "importBackup": "Impor Cadangan (CSV)",
+  "selectBackupFile": "Silakan pilih file CSV cadangan untuk memulihkan data",
+  "customCurrencies": "Mata Uang Kustom",
+  "dateRange": "Rentang Tanggal",
+  "backupVersion": "Versi Cadangan",
+  "restored": "Dipulihkan",
+  "added": "Ditambahkan",
+  "restoreFailed": "Gagal memulihkan data cadangan"
 }
