--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -123,7 +123,6 @@
   "privacyDescription": "I tuoi dati rimangono sul tuo dispositivo",
   "footerDescription": "LedgerWell ti aiuta a tracciare debiti e crediti con supporto multi-valuta e privacy completa.",
   "copyrightText": "© 2025 Sepehr Mohammady. Open source sotto licenza MIT.",
-  "exportToExcel": "Esporta in Excel",
   "exportData": "Esporta Dati",
   "preparingExport": "Preparazione esportazione...",
   "noData": "Nessun Dato",
@@ -155,9 +154,7 @@
   "totalAmount": "Importo Totale",
   "lastTransaction": "Ultima Transazione",
   "createdDate": "Data di Creazione",
-  "importFromExcel": "Importa da Excel",
   "importData": "Importa Dati",
-  "selectExcelFile": "Per favore seleziona un file Excel da cui importare i dati",
   "importValidationFailed": "Validazione Importazione Fallita",
   "importPreviewSummary": "L'importazione aggiungerà {{accounts}} conti con {{transactions}} transazioni usando {{currencies}} valute",
   "importPreviewAccounts": "Conti da importare",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}} conti duplicati trovati",
   "duplicateTransactionsFound": "{{count}} transazioni duplicate trovate",
   "importFailed": "Importazione fallita: {{error}}",
-  "importExecutionFailed": "Fallita l'elaborazione dei dati di importazione",
   "noAccountsToImport": "Nessun conto valido trovato nel file Excel",
   "invalidAccountName": "Il conto {{index}} ha un nome non valido",
   "invalidAccountCurrency": "Il conto {{index}} ha una valuta non valida",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Password rimossa con successo",
   "failedToRemovePassword": "Impossibile rimuovere la password",
   "noPasswordSet": "Nessuna password impostata",
-  "noPasswordSetDescription": "Imposta una password nelle impostazioni dell'app"
+  "noPasswordSetDescription": "Imposta una password nelle impostazioni dell'app",
+  "exportBackup": "Esporta backup (CSV)",
+  "importBackup": "Importa backup (CSV)",
+  "selectBackupFile": "Seleziona un file CSV di backup per ripristinare i dati",
+  "customCurrencies": "Valute personalizzate",
+  "dateRange": "Intervallo di date",
+  "backupVersion": "Versione backup",
+  "restored": "Ripristinato",
+  "added": "Aggiunto",
+  "restoreFailed": "Impossibile ripristinare i dati di backup"
 }
