--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -123,7 +123,6 @@
   "reset": "リセット",
   "settingsSaveFailed": "設定の保存に失敗しました",
   "totalBalance": "総残高",
-  "exportToExcel": "Excelにエクスポート",
   "exportData": "データエクスポート",
   "preparingExport": "エクスポートを準備中...",
   "noData": "データなし",
@@ -155,9 +154,7 @@
   "totalAmount": "総額",
   "lastTransaction": "最後の取引",
   "createdDate": "作成日",
-  "importFromExcel": "Excelからインポート",
   "importData": "データインポート",
-  "selectExcelFile": "データをインポートするExcelファイルを選択してください",
   "importValidationFailed": "インポート検証に失敗",
   "importPreviewSummary": "インポートにより{{accounts}}個のアカウントと{{transactions}}件の取引が{{currencies}}通貨で追加されます",
   "importPreviewAccounts": "インポートするアカウント",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}}個の重複アカウントが見つかりました",
   "duplicateTransactionsFound": "{{count}}件の重複取引が見つかりました",
   "importFailed": "インポートに失敗：{{error}}",
-  "importExecutionFailed": "インポートデータの処理に失敗",
   "noAccountsToImport": "Excelファイルに有効なアカウントが見つかりません",
   "invalidAccountName": "アカウント{{index}}の名前が無効です",
   "invalidAccountCurrency": "アカウント{{index}}の通貨が無効です",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "パスワードが正常に削除されました",
   "failedToRemovePassword": "パスワードの削除に失敗しました",
   "noPasswordSet": "パスワード未設定",
-  "noPasswordSetDescription": "アプリ設定でパスワードを設定してください"
+  "noPasswordSetDescription": "アプリ設定でパスワードを設定してください",
+  "exportBackup": "バックアップをエクスポート (CSV)",
+  "importBackup": "バックアップをインポート (CSV)",
+  "selectBackupFile": "データを復元するCSVバックアップファイルを選択してください",
+  "customCurrencies": "カスタム通貨",
+  "dateRange": "期間",
+  "backupVersion": "バックアップバージョン",
+  "restored": "復元済み",
+  "added": "追加済み",
+  "restoreFailed": "バックアップデータの復元に失敗しました"
 }
