--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -123,7 +123,6 @@
   "reset": "Сбросить",
   "settingsSaveFailed": "Не удалось сохранить настройки",
   "totalBalance": "Общий баланс",
-  "exportToExcel": "Экспорт в Excel",
   "exportData": "Экспорт данных",
   "preparingExport": "Подготовка экспорта...",
   "noData": "Нет данных",
@@ -155,9 +154,7 @@
   "totalAmount": "Общая сумма",
   "lastTransaction": "Последняя транзакция",
   "createdDate": "Дата создания",
-  "importFromExcel": "Импорт из Excel",
   "importData": "Импорт данных",
-  "selectExcelFile": "Пожалуйста, выберите файл Excel для импорта данных",
   "importValidationFailed": "Ошибка валидации импорта",
   "importPreviewSummary": "Импорт добавит {{accounts}} счетов с {{transactions}} транзакциями, используя {{currencies}} валют",
   "importPreviewAccounts": "Счета для импорта",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "Найдено {{count}} дублированных счетов",
   "duplicateTransactionsFound": "Найдено {{count}} дублированных транзакций",
   "importFailed": "Ошибка импорта: {{error}}",
-  "importExecutionFailed": "Не удалось обработать данные импорта",
   "noAccountsToImport": "В файле Excel не найдено допустимых счетов",
   "invalidAccountName": "Счёт {{index}} имеет недопустимое имя",
   "invalidAccountCurrency": "Счёт {{index}} имеет недопустимую валюту",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Пароль успешно удален",
   "failedToRemovePassword": "Не удалось удалить пароль",
   "noPasswordSet": "Пароль не установлен",
-  "noPasswordSetDescription": "Установите пароль в настройках приложения"
+  "noPasswordSetDescription": "Установите пароль в настройках приложения",
+  "exportBackup": "Экспорт резервной копии (CSV)",
+  "importBackup": "Импорт резервной копии (CSV)",
+  "selectBackupFile": "Пожалуйста, выберите CSV-файл резервной копии для восстановления данных",
+  "customCurrencies": "Пользовательские валюты",
+  "dateRange": "Диапазон дат",
+  "backupVersion": "Версия резервной копии",
+  "restored": "Восстановлено",
+  "added": "Добавлено",
+  "restoreFailed": "Не удалось восстановить данные резервной копии"
 }
