--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -123,7 +123,6 @@
   "reset": "초기화",
   "settingsSaveFailed": "설정 저장에 실패했습니다",
   "totalBalance": "총 잔액",
-  "exportToExcel": "Excel로 내보내기",
   "exportData": "데이터 내보내기",
   "preparingExport": "내보내기 준비 중...",
   "noData": "데이터 없음",
@@ -155,9 +154,7 @@
   "totalAmount": "총 금액",
   "lastTransaction": "마지막 거래",
   "createdDate": "생성일",
-  "importFromExcel": "Excel에서 가져오기",
   "importData": "데이터 가져오기",
-  "selectExcelFile": "데이터를 가져올 Excel 파일을 선택하세요",
   "importValidationFailed": "가져오기 검증 실패",
   "importPreviewSummary": "가져오기는 {{currencies}}개 통화를 사용하여 {{accounts}}개 계정과 {{transactions}}건의 거래를 추가합니다",
   "importPreviewAccounts": "가져올 계정",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}}개의 중복 계정을 찾았습니다",
   "duplicateTransactionsFound": "{{count}}건의 중복 거래를 찾았습니다",
   "importFailed": "가져오기 실패: {{error}}",
-  "importExecutionFailed": "가져오기 데이터 처리에 실패했습니다",
   "noAccountsToImport": "Excel 파일에서 유효한 계정을 찾을 수 없습니다",
   "invalidAccountName": "계정 {{index}}의 이름이 유효하지 않습니다",
   "invalidAccountCurrency": "계정 {{index}}의 통화가 유효하지 않습니다",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "비밀번호가 성공적으로 제거되었습니다",
   "failedToRemovePassword": "비밀번호 제거에 실패했습니다",
   "noPasswordSet": "비밀번호 설정 안 됨",
-  "noPasswordSetDescription": "앱 설정에서 비밀번호를 설정하세요"
+  "noPasswordSetDescription": "앱 설정에서 비밀번호를 설정하세요",
+  "exportBackup": "백업 내보내기 (CSV)",
+  "importBackup": "백업 가져오기 (CSV)",
+  "selectBackupFile": "데이터를 복원할 CSV 백업 파일을 선택하세요",
+  "customCurrencies": "사용자 정의 통화",
+  "dateRange": "날짜 범위",
+  "backupVersion": "백업 버전",
+  "restored": "복원됨",
+  "added": "추가됨",
+  "restoreFailed": "백업 데이터 복원 실패"
 }
