--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -123,7 +123,6 @@
   "reset": "Redefinir",
   "settingsSaveFailed": "Falha ao salvar configurações",
   "totalBalance": "Saldo total",
-  "exportToExcel": "Exportar para Excel",
   "exportData": "Exportar Dados",
   "preparingExport": "Preparando exportação...",
   "noData": "Sem Dados",
@@ -155,9 +154,7 @@
   "totalAmount": "Quantia Total",
   "lastTransaction": "Última Transação",
   "createdDate": "Data de Criação",
-  "importFromExcel": "Importar do Excel",
   "importData": "Importar Dados",
-  "selectExcelFile": "Por favor selecione um arquivo Excel para importar dados",
   "importValidationFailed": "Falha na Validação da Importação",
   "importPreviewSummary": "A importação adicionará {{accounts}} contas com {{transactions}} transações usando {{currencies}} moedas",
   "importPreviewAccounts": "Contas para importar",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "{{count}} contas duplicadas encontradas",
   "duplicateTransactionsFound": "{{count}} transações duplicadas encontradas",
   "importFailed": "Falha na importação: {{error}}",
-  "importExecutionFailed": "Falha ao processar dados de importação",
   "noAccountsToImport": "Nenhuma conta válida encontrada no arquivo Excel",
   "invalidAccountName": "A conta {{index}} tem nome inválido",
   "invalidAccountCurrency": "A conta {{index}} tem moeda inválida",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "Senha removida com sucesso",
   "failedToRemovePassword": "Falha ao remover senha",
   "noPasswordSet": "Nenhuma senha configurada",
-  "noPasswordSetDescription": "Configure uma senha nas configurações do aplicativo"
+  "noPasswordSetDescription": "Configure uma senha nas configurações do aplicativo",
+  "exportBackup": "Exportar backup (CSV)",
+  "importBackup": "Importar backup (CSV)",
+  "selectBackupFile": "Selecione um arquivo CSV de backup para restaurar os dados",
+  "customCurrencies": "Moedas personalizadas",
+  "dateRange": "Intervalo de datas",
+  "backupVersion": "Versão do backup",
+  "restored": "Restaurado",
+  "added": "Adicionado",
+  "restoreFailed": "Falha ao restaurar dados de backup"
 }
