--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -123,7 +123,6 @@
   "reset": "重置",
   "settingsSaveFailed": "保存设置失败",
   "totalBalance": "总余额",
-  "exportToExcel": "导出到Excel",
   "exportData": "导出数据",
   "preparingExport": "正在准备导出...",
   "noData": "无数据",
@@ -155,9 +154,7 @@
   "totalAmount": "总金额",
   "lastTransaction": "最后交易",
   "createdDate": "创建日期",
-  "importFromExcel": "从Excel导入",
   "importData": "导入数据",
-  "selectExcelFile": "请选择要导入数据的Excel文件",
   "importValidationFailed": "导入验证失败",
   "importPreviewSummary": "导入将添加{{accounts}}个账户和{{transactions}}笔交易，使用{{currencies}}种货币",
   "importPreviewAccounts": "要导入的账户",
@@ -175,7 +172,6 @@
   "duplicateAccountsFound": "发现{{count}}个重复账户",
   "duplicateTransactionsFound": "发现{{count}}笔重复交易",
   "importFailed": "导入失败：{{error}}",
-  "importExecutionFailed": "处理导入数据失败",
   "noAccountsToImport": "Excel文件中未找到有效账户",
   "invalidAccountName": "账户{{index}}的名称无效",
   "invalidAccountCurrency": "账户{{index}}的货币无效",
@@ -226,5 +222,14 @@
   "passwordRemovedSuccessfully": "密码删除成功",
   "failedToRemovePassword": "删除密码失败",
   "noPasswordSet": "未设置密码",
-  "noPasswordSetDescription": "在应用设置中设置密码"
+  "noPasswordSetDescription": "在应用设置中设置密码",
+  "exportBackup": "导出备份 (CSV)",
+  "importBackup": "导入备份 (CSV)",
+  "selectBackupFile": "请选择CSV备份文件以恢复数据",
+  "customCurrencies": "自定义货币",
+  "dateRange": "日期范围",
+  "backupVersion": "备份版本",
+  "restored": "已恢复",
+  "added": "已添加",
+  "restoreFailed": "恢复备份数据失败"
 }
