fix: cleanup CSV backup implementation and remove debug logs (v0.8.0)
- Fixed date handling for both Date objects and ISO strings in CSV export

- Fixed remaining Excel import reference in backup restore flow

- Added missing translation keys to English locale (10 keys)

- Removed debug console.log statements from CustomCurrencyModal

- Removed obsolete add-export-translations.js script

- Added comprehensive CSV backup documentation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -164,11 +164,21 @@
   "importData": "Import Data",
   "selectBackupFile": "Please select a CSV backup file to restore data from",
   "importValidationFailed": "Backup Validation Failed",
+  "importPreviewSummary": "Import will add {{accounts}} accounts with {{transactions}} transactions using {{currencies}} currencies",
+  "importPreviewAccounts": "Accounts to import",
+  "andMoreAccounts": "and {{count}} more accounts",
+  "importPreviewDateRange": "Transaction date range",
+  "noTransactionsInRange": "No transactions",
   "importWarning": "⚠️ This will modify your existing data. Settings and custom currencies will also be restored.",
   "replaceData": "Replace All Data",
   "mergeData": "Merge with Existing",
   "processingImport": "Processing backup...",
   "importSuccess": "Restore Successful",
+  "importSuccessMessage": "Successfully imported {{accounts}} accounts and {{transactions}} transactions",
+  "importMergeSuccess": "Import completed: Added {{accounts}} accounts and {{transactions}} transactions. Skipped {{skippedAccounts}} duplicate accounts and {{skippedTransactions}} duplicate transactions.",
+  "duplicatesDetected": "Duplicates Detected",
+  "duplicateAccountsFound": "{{count}} duplicate accounts found",
+  "duplicateTransactionsFound": "{{count}} duplicate transactions found",
   "importFailed": "Import failed: {{error}}",
   "restoreFailed": "Failed to restore backup data",
   "noAccountsToImport": "No valid accounts found in the Excel file",
